--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -207,7 +207,7 @@ img {
 /*--------------------------Proyectos-------------------------*/
 
 #proyectos {
-  padding: 30px 0;
+  padding: 50px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -282,6 +282,8 @@ img {
 li img {
   width: 16px;
 }
+
+/*--------------------footer--------------------*/
 
 footer {
   background-color: #333;
